# salop-shell

./: .gitignore  PKGBUILD  README.md  dev.heleno.SalopBar.yml  env.d.ts  eslint.config.js  meson.build  package-lock.json  package.json  startdev.js  toggle-bar.sh  tsconfig.json
.config/: toggle-bar.sh
data/: data.gresource.xml  dev.heleno.salopbar.gschema.xml  gschema.in.xml  gschema.xml  meson.build  metainfo.xml  service.in
src/: App.ts  AppBar.ts  AppLauncher.ts  app.ts  env.d.ts  gresource.xml  main.sh  main.ts  meson.build
src/assets/: style.css
src/components/: AudioOutput.tsx  Brightness.tsx  Clock.tsx  FocusClient.tsx  Mpris.tsx  Notification.tsx  OsLogo.tsx  Shutdown.tsx  Tray.tsx  Wireless.tsx  WorksPaces.tsx
src/styles/: app-launcher.css  global.css  tray.css
src/utils/: brightness.ts  getNetworkIcon.ts  volume.ts
src/widget/: Applauncher.tsx  Bar.tsx  NotificationPopups.tsx  PowerProfile.tsx  Tray.tsx
